assets/css/tailwind.css
@import 'tailwindcss/base';
@import 'tailwindcss/components';
@import 'tailwindcss/utilities';

:root {
  --blue-dark: #000321;
  --blue-darker: hsl(235, 100%, 3%);
}

@layer base {
  html,
  body {
    width: 100%;
    height: 100%;
  }

  body {
    font-family: 'Cabin', sans-serif;
    letter-spacing: 0.5px;
  }

  h1,
  h2 {
    font-family: 'Oswald', sans-serif;
  }

  strong,
  b {
    font-weight: 900;
  }

  h1,
  h2 {
    letter-spacing: 2.5px;
  }

  p,
  li {
    font-size: 1.25rem; /* 20px */
    line-height: 1.75rem; /* 28px */
    font-weight: 400;
  }

  h1 {
    font-size: 2.5rem; /* 36px */
    line-height: 3rem; /* 48px */
    font-weight: 600;
  }

  h2 {
    font-size: 1.25rem; /* 20px */
    line-height: 1.5rem; /* 24px */
    font-weight: 600;
  }

  @media screen(md) {
    h1,
    h2 {
      letter-spacing: 2.5px;
    }

    p,
    li {
      font-size: 1.5rem;
      line-height: 2.5rem;
    }

    h1 {
      font-size: 4.5rem;
      line-height: 6rem;
    }

    h2 {
      font-size: 2.25rem;
      line-height: 3rem;
    }
  }
}

@layer components {
}

@layer utilities {
}

